methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:71: error: not found: value poseBrosse
  poseBrosse()
  ^